# improvisation-lab

./: .gitignore  Makefile  README.md  config.yml  config.yml.example  hf_space_metadata.yml  main.py  pyproject.toml
.github/workflows/: deploy_to_hf.yml
improvisation_lab/: __init__.py  config.py
improvisation_lab/application/: __init__.py  app_factory.py  base_app.py  base_console_app.py
improvisation_lab/application/interval_practice/: __init__.py  console_interval_app.py  web_interval_app.py
improvisation_lab/application/melody_practice/: __init__.py  app_factory.py  base_app.py  console_app.py  web_app.py
improvisation_lab/application/piece_practice/: __init__.py  (+2 more)
improvisation_lab/domain/: __init__.py  music_theory.py
improvisation_lab/infrastructure/: __init__.py
improvisation_lab/presentation/: __init__.py  console_view.py  melody_view.py  view_text_manager.py  web_interface_view.py  web_view.py
improvisation_lab/service/: __init__.py  base_practice_service.py  interval_practice_service.py  melody_practice_service.py  piece_practice_service.py
scripts/: __init__.py  pitch_detection_demo.py
tests/: __init__.py  test_config.py
tests/application/: test_app_factory.py  test_melody_practice_service.py
tests/domain/: __init__.py  test_music_theory.py
tests/infrastructure/: __init__.py
tests/presentation/: __init__.py  test_console_view.py  test_view_text_manager.py  test_web_interface_view.py
tests/service/: test_base_practice_service.py  test_interval_practice_service.py  test_melody_practice_service.py  test_piece_practice_service.py
(+71 files in other folders)
